updated files with icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Brandon Kaminski - Home</title>
     <!-- CSS HERE -->
     <link rel="stylesheet" type="text/css" href="bkstylesheet.css">
+	<link rel="icon" type="image/jpg" sizes="32x32" href="images/favicon.jpg">
     <script type = "text/javascript">
       var ts = document.getElementById('timestamp');
       var d = new Date();
