--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
     <title>Brandon Kaminski - Projects</title>
     <!-- CSS HERE -->
     <link rel="stylesheet" type="text/css" href="bkstylesheet.css">
+	<link rel="icon" type="image/jpg" sizes="32x32" href="images/favicon.jpg">
   </head>
   <body>
     <div class = "header">
@@ -46,17 +47,9 @@
       between games.</p>
     <p><a href = "https://github.com/branmkam/KaminskiKasino">View Code Here</a>
       <img height = "24" src = "images/pythonimg.png"></img></p>
-    <p class = "p50"><b>pronounce.it - </b> My project at HackNC 2019, created in a team of four. We were runners-up
-      in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> pronounce.it is an Android app that 
-    utilizes native Google speech-to-text API to help users practice pronunciation of foreign languages. Broken into
-  lessons: each lesson has sentences and notifies the user of which specific words they pronounced right or wrong. The wrong ones
-  are cycled back to emphasize correct pronunciation. Read more on the README file on GitHub!</p>
-    <p><a href = "https://github.com/xinrod/pronounce.it">View Code Here</a>
-      <img height = "24" src = "images/javaimg.png"></img></p>
-
     </div>
     <div class = "footer">
-    <p id = "lastupdate">Last Updated: 10/13/2019 <br/>
+    <p id = "lastupdate">Last Updated: 9/23/2019 <br/>
       This website designed and coded by Brandon Kaminski since 9/17/2019</p>
     </div>
   </body>
