--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <title>Brandon Kaminski - About</title>
     <!-- CSS HERE -->
     <link rel="stylesheet" type="text/css" href="bkstylesheet.css">
+	<link rel="icon" type="image/jpg" sizes="32x32" href="images/favicon.jpg">
   </head>
   <body>
 
