--- a/projects.html
+++ b/projects.html
@@ -48,11 +48,11 @@
     <p><a href = "https://github.com/branmkam/KaminskiKasino">View Code Here</a>
       <img height = "24" src = "images/pythonimg.png"></img></p>
 	<p class = "p50"><b>pronounce.it - </b>  My project at HackNC 2019, created in a team of four. We were runners-up
-      in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> pronounce.it is an Android app that 
+      in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> pronounce.it is an Android app that
     utilizes native Google speech-to-text API to help users practice pronunciation of foreign languages. Broken into
   lessons: each lesson has sentences and notifies the user of which specific words they pronounced right or wrong. The wrong ones
   are cycled back to emphasize correct pronunciation. Read more on the README file on GitHub!</p>
-    <p><a href = "https://github.com/xinrod.pronounce.it">View Code Here</a>
+    <p><a href = "https://github.com/xinrod/pronounce.it">View Code Here</a>
       <img height = "24" src = "images/javaimg.png"></img></p>
     </div>
     <div class = "footer">
