--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
     </br>
       <h2>Experience</h2>
       <!-- discuss my csc stuff here -->
-      <h2><a href = "files/RESUME - UNC.docx">View My Resume!</a></h2>
+      <h2><a href = "files/RESUME - UNC.docx" target = "_blank">Resume coming soon!</a></h2>
       <p></p>
     </div>
 
     <div class = "footer">
-    <p id = "lastupdate">Last Updated: 9/23/2019 <br/>
+    <p id = "lastupdate">Last Updated: 11/11/2019 <br/>
       This website designed and coded by Brandon Kaminski since 9/17/2019</p>
     </div>
 
