--- a/projects.html
+++ b/projects.html
@@ -40,12 +40,12 @@
 
     <p class = "p50"><b>TodaLingua - </b> an application built in Java and JavaFX that lets users practice language
       by writing sentences (very elementary, only completed for basic Spanish and Italian).</p>
-      <p><a href = "projects.html">Code Coming 	Soon!</a>
+      <p><a href = "projects.html" target = "_blank">Code Coming Soon!</a>
         <img height = "24" src = "images/javaimg.png"></img></p>
     <p class = "p50"><b>The Kaminski Kasino - </b> An interactive casino built in Python beginning in summer 2019,
       with single-player blackjack and craps! I'm still working on the central interface to navigate
       between games.</p>
-    <p><a href = "https://github.com/branmkam/KaminskiKasino">View Code Here</a>
+    <p><a href = "https://github.com/branmkam/KaminskiKasino" target = "_blank">View Code Here</a>
       <img height = "24" src = "images/pythonimg.png"></img></p>
 	<p class = "p50"><b>pronounce.it - </b>  My project at HackNC 2019, created in a team of four. We were runners-up
       in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> pronounce.it is an Android app that
@@ -53,10 +53,10 @@
   lessons: each lesson has sentences and notifies the user of which specific words they pronounced right or wrong. The wrong ones
   are cycled back to emphasize correct pronunciation. Read more on the README file on GitHub!</p>
     <p><a href = "https://github.com/xinrod/pronounce.it">View Code Here</a>
-      <img height = "24" src = "images/javaimg.png"></img></p>
+      <img height = "24" src = "images/javaimg.png" target = "_blank"></img></p>
     </div>
     <div class = "footer">
-    <p id = "lastupdate">Last Updated: 11/4/2019 <br/>
+    <p id = "lastupdate">Last Updated: 11/11/2019 <br/>
       This website designed and coded by Brandon Kaminski since 9/17/2019</p>
     </div>
   </body>
