add octave to projs

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     <h2>Programming languages:</h2>
     <p> Fluent: Java, Ruby, HTML, CSS <br/>
     Adept: Python </br>
-    Learning: JavaScript
+    Learning: JavaScript, Octave
   </p>
   </br>
 <ul>
