--- a/projects.html
+++ b/projects.html
@@ -51,8 +51,8 @@
       in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> pronounce.it is an Android app that
     utilizes native Google speech-to-text API to help users practice pronunciation of foreign languages. Broken into
   lessons: each lesson has sentences and notifies the user of which specific words they pronounced right or wrong. The wrong ones
-  are cycled back to emphasize correct pronunciation. Read more on the README file on GitHub!</p>
-    <p><a href = "https://github.com/xinrod/pronounce.it">View Code Here</a>
+  are cycled back to emphasize correct pronunciation. Read more on the Devpost page and the README file on GitHub!</p>
+    <p><a href = "https://devpost.com/software/pronounce-it">View Code Here</a>
       <img height = "24" src = "images/javaimg.png" target = "_blank"></img></p>
     </div>
     <div class = "footer">
