--- a/about.html
+++ b/about.html
@@ -29,13 +29,12 @@
       on and off throughout the past few years.</p>
     </br>
       <h2>Experience</h2>
-      <!-- discuss my csc stuff here -->
-      <h2><a href = "files/RESUME - UNC.docx" target = "_blank">Resume coming soon!</a></h2>
+      <h2><a href = "files/Resume-BrandonKaminski.docx" target = "_blank">Download my resume!</a></h2>
       <p></p>
     </div>
 
     <div class = "footer">
-    <p id = "lastupdate">Last Updated: 11/11/2019 <br/>
+    <p id = "lastupdate">Last Updated: 2/29/2020<br/>
       This website designed and coded by Brandon Kaminski since 9/17/2019</p>
     </div>
 
