made site better and fixed panels

--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Brandon Kaminski - About</title>
-    <!-- CSS HERE -->
     <link rel="stylesheet" type="text/css" href="bkstylesheet.css">
 	<link rel="icon" type="image/jpg" sizes="32x32" href="images/favicon.jpg">
   </head>
@@ -22,11 +21,12 @@
       <h2>About Me: Who Am I?</h2>
       <p>I am currently a freshman at the University of North Carolina - Chapel Hill,
          planning to double major in Computer Science, BS, and Linguistics, BA.</p>
-      <p>As a musician, I'm a pianist, composer, and producer. Since starting college,
-      however, I haven't been able to do as much.</p>
-      <p>As a linguist, I enjoy studying various languages (mostly Indo-European).
-      I can speak Spanish and Italian fluently (but not natively), and have studied Portuguese and French
-      on and off throughout the past few years.</p>
+      <p>As a musician, I'm a pianist, composer, and producer. It's been mostly for fun so far,
+      but I'm planning on releasing an album in a year or two. </p>
+      <p>I study foreign languages for fun. I can speak Spanish and Italian fluently (but not natively), and have studied
+          Portuguese and French on and off throughout the past few years. I've also learned bits and pieces of some
+      other languages from friends who speak them, or by using Duolingo.</p>
+         <p>To see my computer science projects, click on the "My Projects" tab!</p>
     </br>
       <h2>Experience</h2>
       <h2><a href = "files/Resume-BrandonKaminski.docx" target = "_blank">Download my resume!</a></h2>
@@ -34,7 +34,7 @@
     </div>
 
     <div class = "footer">
-    <p id = "lastupdate">Last Updated: 2/29/2020<br/>
+    <p id = "lastupdate">Last Updated: 3/24/2020<br/>
       This website designed and coded by Brandon Kaminski since 9/17/2019</p>
     </div>
 
