--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,10 @@
     <div class = "main">
       <h2>Email</h2>
       <p id = "emailgang">If you'd like to contact me, feel free to email me at
-      <a href = "mailto:branmkam@live.unc.edu">branmkam@live.unc.edu</a>!</p>
+      <a href = "mailto:branmkam@live.unc.edu" target = "_blank">branmkam@live.unc.edu</a>!</p>
     </div>
     <div class = "footer">
-    <p id = "lastupdate">Last Updated: 9/23/2019 <br/>
+    <p id = "lastupdate">Last Updated: 3/24/2020 <br/>
       This website designed and coded by Brandon Kaminski since 9/17/2019</p>
     </div>
 
