--- a/projects.html
+++ b/projects.html
@@ -21,14 +21,16 @@
 
     <ul>
       <li class = "inl"><img class = "pl" src="images/javaimg.png"></img></li>
-      <li class = "inl"><img class = "pl" src="images/pythonimg.png"></img></li>
-      <li class = "inl"><img class = "pl" src="images/rubyimg.png"></img></li>
       <li class = "inl"><img class = "pl" src="images/htmlcssimg.png"></img></li>
+      <li class = "inl"><img class = "pl" src="images/rubyimg.png"></img></li>
+      <li class = "inl"><img class = "pl" src="images/pythonimg.png"></img></li>
+      <li class = "inl"><img class = "pl" src="images/cimg.png"></img></li>
+      <li class = "inl"><img class = "pl" src="images/jsimg.png"></img></li>
     </ul>
     <h2>Programming languages:</h2>
     <p> Fluent: Java, Ruby, HTML, CSS <br/>
-    Adept: Python </br>
-    Learning: JavaScript, Octave
+    Adept: Python, C </br>
+    Learning: JavaScript
   </p>
   </br>
 <ul>
@@ -38,25 +40,29 @@
 </ul>
     <p>Here is a list of projects I've worked on besides this website!</p>
 
-    <p class = "p50"><b>TodaLingua - </b> an application built in Java and JavaFX that lets users practice language
-      by writing sentences (very elementary, only completed for basic Spanish and Italian).</p>
-      <p><a href = "projects.html" target = "_blank">Code Coming Soon!</a>
-        <img height = "24" src = "images/javaimg.png"></img></p>
-    <p class = "p50"><b>The Kaminski Kasino - </b> An interactive casino built in Python beginning in summer 2019,
-      with single-player blackjack and craps! I'm still working on the central interface to navigate
-      between games.</p>
-    <p><a href = "https://github.com/branmkam/KaminskiKasino" target = "_blank">View Code Here</a>
-      <img height = "24" src = "images/pythonimg.png"></img></p>
-	<p class = "p50"><b>pronounce.it - </b>  My project at HackNC 2019, created in a team of four. We were runners-up
+    <p class = "p50"><b>pronounce.it - </b>  My project at HackNC 2019, created in a team of four. We were runners-up
       in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> pronounce.it is an Android app that
     utilizes native Google speech-to-text API to help users practice pronunciation of foreign languages. Broken into
   lessons: each lesson has sentences and notifies the user of which specific words they pronounced right or wrong. The wrong ones
   are cycled back to emphasize correct pronunciation. Read more on the Devpost page and the README file on GitHub!</p>
     <p><a href = "https://devpost.com/software/pronounce-it">View Code Here</a>
       <img height = "24" src = "images/javaimg.png" target = "_blank"></img></p>
+
+      <p class = "p50"><b>The Kaminski Kasino - </b> An interactive casino built in Python beginning in summer 2019,
+        with single-player blackjack and craps! I'm still working on the central interface to navigate
+        between games.</p>
+      <p><a href = "https://github.com/branmkam/KaminskiKasino" target = "_blank">View Code Here</a>
+        <img height = "24" src = "images/pythonimg.png"></img></p>
+
+
+    <p class = "p50"><b>TodaLingua - </b> an application built in Java and JavaFX that lets users practice language
+      by writing sentences (very elementary, only completed for basic Spanish and Italian).</p>
+      <p><a href = "projects.html" target = "_blank">Code Coming Soon!</a>
+        <img height = "24" src = "images/javaimg.png"></img></p>
+
     </div>
     <div class = "footer">
-    <p id = "lastupdate">Last Updated: 12/26/2019 <br/>
+    <p id = "lastupdate">Last Updated: 3/24/2020<br/>
       This website designed and coded by Brandon Kaminski since 9/17/2019</p>
     </div>
   </body>
