fixed proj link

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       but I'm planning on releasing an album in a year or two. </p>
       <p>I study foreign languages for fun. I can speak Spanish and Italian fluently (but not natively), and have studied
           Portuguese and French on and off throughout the past few years. I've also learned bits and pieces of some
-      other languages from friends who speak them, or by using Duolingo.</p>
+      other languages from friends who speak them (such as Turkish and Afrikaans), or by using Duolingo.</p>
          <p>To see my computer science projects, click on the "My Projects" tab!</p>
     </br>
       <h2>Experience</h2>
