--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,8 @@
     utilizes native Google speech-to-text API to help users practice pronunciation of foreign languages. Broken into
   lessons: each lesson has sentences and notifies the user of which specific words they pronounced right or wrong. The wrong ones
   are cycled back to emphasize correct pronunciation. Read more on the Devpost page and the README file on GitHub!</p>
-    <p><a href = "https://devpost.com/software/pronounce-it">View Code Here</a>
-      <img height = "24" src = "images/javaimg.png" target = "_blank"></img></p>
+    <p><a href = "https://devpost.com/software/pronounce-it  target = "_blank"">View Code Here</a>
+      <img height = "24" src = "images/javaimg.png"></img></p>
 
       <p class = "p50"><b>The Kaminski Kasino - </b> An interactive casino built in Python beginning in summer 2019,
         with single-player blackjack and craps! I'm still working on the central interface to navigate
