--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
     </div>
     <br/>
     <div class = "main">
+      <img id = "headshot" src = "images/myHeadshot.jpg" height = "200"></img>
       <h2>About Me: Who Am I?</h2>
       <p>I am currently a sophomore at the University of North Carolina - Chapel Hill,
          planning to double major in Computer Science, BS, and Linguistics, BA.</p>
