--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
          <p>To see my computer science projects, click on the "My Projects" tab!</p>
     </br>
       <h2>Experience</h2>
-      <h2><a href = "files/Resume-BrandonKaminski.docx" target = "_blank">Download my resume!</a></h2>
+      <h2><a href = "files/Resume-BrandonKaminski.docx" target = "_blank">Download my resume!</a> | <a href = "https://www.linkedin.com/in/brandon-kaminski-86580a19a/" target = "_blank">View my LinkedIn profile!</a></h2>
       <p></p>
     </div>
 
