--- a/projects.html
+++ b/projects.html
@@ -38,27 +38,34 @@
 <li class = "inl"><a id = "githubref" href = "https://github.com/branmkam">
 <img height = "100" src = "images/githubimg.png"></img></a></li>
 </ul>
-    <p>Here is a list of projects I've worked on besides this website!</p>
+    <p class = "proj">Projects Besides This Website:</p>
 
-    <p class = "p50"><b>pronounce.it - </b>  My project at HackNC 2019, created in a team of four. We were runners-up
-      in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> pronounce.it is an Android app that
+    <p class = "p50"><b>Comparing Economic Indicators and COVID-19 Numbers - </b> My project at the Carolina Data Challenge 2020, 
+      created in a team of four. We <b>won</b> in our chosen category, Social Science! <br> <br>
+      This project compared various economic factors (such as GDP change and inflation rate) in many countries with 
+      their tallies of COVID cases, deaths, and mortality rates to discover if the two were correlated; our results were a resounding no.
+      Using what we could discern, we created a machine learning model using regression to predict COVID mortality rates across the world in 2021.
+      My role in the project was utilizing the Python library Pandas to reorganize and consolidate data sets 
+      for easy visualization, as well as being the main contributor to our accompanying website, linked below!
+    </p>
+    <p class = "viewcode"><a href = "https://github.com/Carolina-Data-Challenge/The-Fire-Ferrets" target = "_blank">View Code Here</a>
+      <img height = "24" src = "images/pythonimg.png"></img> | <a href = "https://branmkam.github.io/The-Fire-Ferrets" target = "_blank">View Website Here</a>
+        <img height = "24" src = "images/htmlcssimg.png"></img></p>
+
+
+    <p class = "p50"><b>pronounce.it - </b>  My project at HackNC 2019, created in a team of four. We were <b>runners-up</b>
+      in the "Best Beginner Hack" category, as well as Wolfram Award winners! <br> <br> pronounce.it is an Android app that
     utilizes native Google speech-to-text API to help users practice pronunciation of foreign languages. Broken into
   lessons: each lesson has sentences and notifies the user of which specific words they pronounced right or wrong. The wrong ones
   are cycled back to emphasize correct pronunciation. Read more on the Devpost page and the README file on GitHub!</p>
-    <p><a href = "https://devpost.com/software/pronounce-it"  target = "_blank">View Code Here</a>
+    <p class = "viewcode"><a href = "https://devpost.com/software/pronounce-it"  target = "_blank">View Code Here</a>
       <img height = "24" src = "images/javaimg.png"></img></p>
 
       <p class = "p50"><b>The Kaminski Kasino - </b> An interactive casino built in Python beginning in summer 2019,
         with single-player blackjack and craps! I'm still working on the central interface to navigate
         between games.</p>
-      <p><a href = "https://github.com/branmkam/KaminskiKasino" target = "_blank">View Code Here</a>
+      <p class = "viewcode"><a href = "https://github.com/branmkam/KaminskiKasino" target = "_blank">View Code Here</a>
         <img height = "24" src = "images/pythonimg.png"></img></p>
-
-
-    <p class = "p50"><b>TodaLingua - </b> an application built in Java and JavaFX that lets users practice language
-      by writing sentences (very elementary, only completed for basic Spanish and Italian).</p>
-      <p><a href = "projects.html" target = "_blank">Code Coming Soon!</a>
-        <img height = "24" src = "images/javaimg.png"></img></p>
 
     </div>
     <div class = "footer">
